<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              tools:context=".MainActivity">


	<EditText
			android:id="@+id/edit_distance"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="100dp"
			android:hint="@string/distance"
			android:inputType="numberDecimal"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:gravity="center"
			android:text="@string/total_km"/>

	<EditText
			android:id="@+id/edit_price"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:hint="@string/price"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:gravity="center"
			android:text="@string/price_per_liter"/>

	<EditText
			android:id="@+id/edit_autonomy"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:hint="@string/autonomy"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:gravity="center"
			android:text="@string/km_per_liter"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:gravity="center"
			android:text="@string/total_spend"
			android:textAllCaps="true"
			android:textSize="20sp"/>

	<TextView
			android:id="@+id/text_total_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:gravity="center"
			android:text="@string/total_value"
			android:textAllCaps="true"
			android:textColor="#0827E8"
			android:textSize="40sp"/>

	<Button
			android:id="@+id/button_calc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:backgroundTint="@color/teal_700"
			android:padding="10dp"
			android:text="@string/calculate"
			android:textSize="20sp"/>

</LinearLayout>